--- a/src/components/contact/list/contact-list-partial.html
+++ b/src/components/contact/list/contact-list-partial.html
@@ -1,5 +1,5 @@
 <div>
-    <md-button class="md-fab md-mini md-primary" aria-label="{{messages.CREATE_CONTACT}}">
+    <md-button class="md-fab md-mini md-primary" aria-label="{{messages.CREATE_CONTACT}}" ui-sref="createContact">
         <md-icon md-svg-icon="add_contact"></md-icon>
     </md-button>
 </div>
